--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node ./Server/server.js"
+    "dev": "node ./Server/server.js",
+    "public":"http-server ./Server/public/"
   },
   "keywords": [],
   "author": "",
